--- a/TODO
+++ b/TODO
@@ -14,7 +14,8 @@
 * TODO Add the check for @proof in pre-commit
   We should forbid theorems with @proof at the master repo. Check it
   using the XML created by article - there should be no element "SkippedProof" 
-* TODO Add better error messages
+* DONE Add better error messages
+  CLOSED: [2010-03-19 Fri 10:53]
   When we do not commit, show people a log of the pre-commit check,
   and improve the pre-commit/make to tell the errors
 * TODO Create the "frontend" repo(s), for anonymous pushes
