--- a/TODO
+++ b/TODO
@@ -11,7 +11,7 @@
   sandbox.  This could be a script (similar to the setup_repo script)
   that unpacks the mml .tar distro and commits it to "stable". Could
   be also a cron job, checking the mizar download page periodically.
-* TODO Add the check for @proof in pre-commit
+* DONE Add the check for @proof in pre-commit
   We should forbid theorems with @proof at the master repo. Check it
   using the XML created by article - there should be no element "SkippedProof" 
 * DONE Add better error messages
