Round out our TODO list with new item states and tags.
For keeping better track (hopefully) of what we're up to.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 ; -*- mode: org; -*-
+#+SEQ_TODO: TODO IN-PROGRESS IN-PROGRESS | DONE
+#+SEQ_TODO: BUG | FIXED
+#+TAGS: jesse josef
+#+STARTUP: overview
 * DONE Set up some perl tests
   As things stand now, I am testing this code by doing a lot of manual
   changes.  Setting up perl tests would help to make this process more
