--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 ; -*- mode: org; -*-
-#+SEQ_TODO: TODO IN-PROGRESS IN-PROGRESS | DONE
+#+SEQ_TODO: TODO IN-PROGRESS | DONE
 #+SEQ_TODO: BUG | FIXED
 #+TAGS: jesse josef
 #+STARTUP: overview
@@ -143,4 +143,4 @@
   least for one PA, and others get motivated to actually give us the
   corresponding tools and work with us on their plugging-in and
   use. Without good testers and developers, it is not going to work.
-* TODO Factor out the CSS from the generated article HTML to a separate file
+* DONE Factor out the CSS from the generated article HTML to a separate file
