Add (my, jessealama's) xsl4mizar as a submodule.
This seems like a nice solution to the problem of looking for
XSL4MIZAR outside of this module's home directory.

--- a/TODO
+++ b/TODO
@@ -181,3 +181,4 @@
   CLOSED: [2010-04-16 Fri 20:36] Escaping ampersands is just the
   begining.  Solution: the function escapeHTML, conveniently provided
   already in the CGI.pm perl module.
+* TODO Set up xsl4mizar as a git submodule of mwiki
