todo for better environment error messaging

--- a/TODO
+++ b/TODO
@@ -149,3 +149,4 @@
   corresponding tools and work with us on their plugging-in and
   use. Without good testers and developers, it is not going to work.
 * DONE Factor out the CSS from the generated article HTML to a separate file
+* TODO Fix error message when environment is incorrect (inknown file)
