line numbers or output with errors

--- a/TODO
+++ b/TODO
@@ -151,3 +151,4 @@
 * DONE Factor out the CSS from the generated article HTML to a separate file
 * TODO Fix error message when environment is incorrect (inknown file)
 * TODO Enhance the deafult environ to work with empty (possibly more - templates for environs)
+* TODO ADD line numbers to the edit window (or allow seeing output with errors)
