--- a/doc/gito-reg.mkd
+++ b/doc/gito-reg.mkd
@@ -125,3 +125,23 @@ clear instructions on how to set it up.
 [repout]: http://sitaramc.github.com/gitolite/doc/report-output.html
 [delegation]: http://sitaramc.github.com/gitolite/doc/delegation.html
 [rmrepo]: http://sitaramc.github.com/gitolite/doc/admin-defined-commands.html#rmrepo
+
+
+### MathWiki implementation
+
+- gitolite runs as www-data - this means it has a ssh dir with keys
+- bare repos are in /var/www/repositories (this could be changed to /home/www-data as in indefero)
+- checked out repos are under /var/cache/mwiki/admin
+- registration form take username password and public key (we just use the key now)
+- list of registered users is stored in a separate file under /var/cache/mwiki/admin - users.conf
+- users.conf is included into gitolite.conf automatically
+- @all group in gitolite can read all repos, each user has his RW fast-forward permissions
+- when a user registers, a clone of the current official repos is
+  made in his (named after him) subdirectory in repositories and
+  admin called mwiki
+- gitweb knows about the user repos, and the wiki can list all users
+  
+  
+#### limitations
+- not yet hooks in the users repos
+- no passwords for doing web-based operations, changing the ssh key, etc.
